# mbzlists-resolvers

./: .bmpfile  .gitignore  Cargo.toml  Dockerfile  README.org
src/: main.rs  mbzlists.rs  platform.rs  view.rs  webapp.rs
src/platform/: spotify.rs  subsonic.rs  youtube.rs
templates/: home.html  layout.html  playlist_create.html  playlist_created.html  sp_created.html  sp_upload.html  yt_created.html  yt_upload.html
